[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyreparse_DSIDLO"
version = "0.0.1a"
authors = [
  { name="dsidlo", email="dsidlo@gmail.com" },
]
description = "Build Efficient RegExp Parsing Engines."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dsidlo/preparse"
"Bug Tracker" = "https://github.com/dsidlo/preparse/issues"

