[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyreparse"
version = "0.0.3"
authors = [
  { name="dsidlo", email="dsidlo@gmail.com" },
]
description = "Build Efficient RegExp Parsing Engines. Quickly process massive structured and semi-structured text files."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Text Processing",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dsidlo/pyreparse"
"Source Code" = "https://github.com/dsidlo/pyreparse"
Repository = "https://github.com/dsidlo/pyreparse"
"Issue Tracker" = "https://github.com/dsidlo/pyreparse/issues"
Changelog = "https://github.com/dsidlo/pyreparse/blob/main/CHANGELOG.md"
